bugfix: alignment landingpage & header btn

--- a/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/landing_page.less
+++ b/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/landing_page.less
@@ -118,6 +118,9 @@
 
  .reverse-header-margin{
      margin-top: -20px;
+     .ui.flashed.message{
+        padding: 0 0 12px 0;
+    }
  }
 
  .record-management-buttons{
